--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
-
   <title>- Clock -</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-   
-  <div id="border">
-    <div id="clockDisplay" class="clock" onload="showTime()"></div>
-  </div>
- 
+
+  <img src="https://picsum.photos/1920/1080" alt="Image Background" />
+
+  <div id="clockDisplay" onload="showTime()"></div>
+
+  <div id="welcome"></div>
+
   <script src="index.js"></script>
 </body>
 
