--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       media="screen and (max-width: 768px)"
     />
 
+  <link rel="shortcut icon" href="./assets/favicon2.ico" >
   <title>- Clock -</title>
   <link rel="stylesheet" href="style.css">
 </head>
